# greeclimate

./: .releaserc  CHANGELOG.md  README.md  gree.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-test.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: publish-package.yml.disabled  python-package.yml  semantic-release.yml
gree_versati/: __init__.py  awhp_device.py  base_device.py  cipher.py  device.py  deviceinfo.py  discovery.py  exceptions.py  network.py  taskable.py
greeclimate/: awhp_device.py  base_device.py  device.py
greeclimate_versati_fork/: __init__.py  awhp_device.py  base_device.py  device.py  discovery.py  network.py
stubs/Crypto/Cipher/: AES.pyi
tests/: common.py  conftest.py  test_awhp_device.py  test_cipher.py  test_device.py  test_discovery.py  test_issues.py  test_network.py
